# concurrency-recipes

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/libsee/: CMakeLists.txt
benchmark/see/: CMakeLists.txt
cmake/: Boost.cmake  Coverage.cmake  Cppcheck.cmake  Doxygen.cmake  Install.cmake  Memcheck.cmake  Precompiling.cmake  Protobuf.cmake  Testing.cmake
src/: CMakeLists.txt
src/1_simple_work/: CMakeLists.txt  README.md  main.cpp
src/2_simple_work_in_thread/: CMakeLists.txt  README.md  main.cpp
src/3_simple_work_stopable/: CMakeLists.txt  README.md  main.cpp
src/4_shared_work/: CMakeLists.txt  README.md  main.cpp
src/5_false_shared_work/: CMakeLists.txt  README.md  main.cpp
src/6_large_shared_work/: CMakeLists.txt  README.md  dead_lock.patch  fix.patch  main.cpp
src/7_latched_work/: CMakeLists.txt  README.md  main.cpp
src/8_signaled_work/: CMakeLists.txt  README.md  main.cpp
src/9_async_work/: CMakeLists.txt  README.md  main.cpp
src/libsee/: CMakeLists.txt
src/libsupport/: CMakeLists.txt  libsupport.cpp
src/libsupport/include/libsupport/: libsupport.h
src/see/: CMakeLists.txt
test/: CMakeLists.txt
test/libsee/: CMakeLists.txt  google_test_see.cpp
test/libsee/resources/: expected.json
test/see/: CMakeLists.txt
